# SimpleSpaceShooter

./: .gitignore  index.html  pyproject.toml  readme.md
SpaceShooter/: __main__.py  background.py  main.py  obstacle_manager.py  obstacles.py  player.py  shot.py
SpaceShooter/screens/: game_over_screen.py  play_screen.py  screen.py  start_screen.py
resources/: asteroid.xcf  player.xcf  shot.xcf
