[project]
name = "SpaceShooter"
version = "0.1.0"
dependencies = ["pygame-ce>=2.4.1"]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["SpaceShooter", "resources"]
exclude = ["resources/*.xcf"]
sources = { "resources" = "SpaceShooter/resources" }

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
play = { cmd = "python -c 'from SpaceShooter.main import App;App().execute()'" }
serve = { call = "http.server" }
